# Student-Paper-Builder

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
docker_compose/: app.yaml  broker.yaml  storages.yaml
src/: const.py  main.py
src/application/services/: auth.py  document_creator.py  jwt.py
src/application/use_cases/documents/: create.py  delete.py  download.py  get_document.py  update.py  upload_image.py
src/application/use_cases/users/: login.py  register.py  reset_password.py
src/domain/common/: entity.py  exception.py
src/domain/document/: entity.py  exception.py  value_object.py
src/domain/jwt/: exception.py
src/domain/user/: entity.py  exception.py  value_object.py
src/infrastructure/broker_messages/rabbitmq/: consumer.py  publisher.py
src/infrastructure/database/: postgres.py
src/infrastructure/ioc/: ioc.py
src/infrastructure/models/: base.py
src/infrastructure/repositories/: base.py  sqlalchemy.py
src/infrastructure/repositories/documents/: base.py  converter.py  mongo.py
src/infrastructure/repositories/users/: base.py  converter.py  mongo.py
src/presentation/api/controllers/: setup_routers.py
src/presentation/api/schemas/: response.py
src/presentation/controllers/: auth.py  document.py  main.py  setup_routers.py
src/presentation/schemas/: document.py  user.py
src/presentation/static/css/: create_document.css  login.css  main.css  register.css
src/presentation/static/html/: 404.html  about.html  base.html  create_document.html  login.html  register.html  reset.html  reset_password.html
src/presentation/static/js/: create_document.js  (+1 more)
src/settings/: config.py
tests/domain/values/: test_user.py
(+6 files in other folders)
