[tool.poetry]
name = "student paper builder"
version = "0.1.0"
description = ""
authors = ["Maksim <knyazev.maksim2852@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.8"}
alembic = "^1.14.1"
docxtpl = "^0.19.1"
dishka = "^1.4.2"
motor = "^3.7.0"
bcrypt = "4.0.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
aiormq = "^6.8.1"
aiosmtplib = "^3.0.2"
pytz = "^2025.1"
pdfminer-six = "^20240706"
reportlab = "^4.3.1"
weasyprint = "^64.1"
pytest = "^8.3.5"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
